cc = meson.get_compiler('c')

lib_bz2 = cc.find_library('bz2')
lib_openssl = dependency('openssl')
lib_pq = dependency('libpq')
lib_xml = dependency('libxml-2.0')
lib_yaml = cc.find_library('yaml')
lib_z = dependency('zlib')

conf_data = configuration_data()

conf_data.set_quoted('CFGOPTDEF_CONFIG_PATH', '/etc/pgbackrest')
conf_data.set('NDEBUG', true)

configure_file(output: 'build.auto.h', configuration: conf_data)

src_common = [
	'common/debug.c',
	'common/encode.c',
	'common/error.c',
	'common/io/filter/buffer.c',
	'common/io/filter/filter.c',
	'common/io/filter/group.c',
	'common/io/filter/sink.c',
	'common/io/bufferRead.c',
	'common/io/bufferWrite.c',
	'common/io/io.c',
	'common/io/read.c',
	'common/io/write.c',
	'common/log.c',
	'common/memContext.c',
	'common/regExp.c',
	'common/stackTrace.c',
	'common/time.c',
	'common/type/buffer.c',
	'common/type/convert.c',
	'common/type/keyValue.c',
	'common/type/list.c',
	'common/type/object.c',
	'common/type/pack.c',
	'common/type/string.c',
	'common/type/stringZ.c',
	'common/type/stringId.c',
	'common/type/stringList.c',
	'common/type/variant.c',
	'common/type/variantList.c',
	'common/user.c',
	'common/wait.c',
	'config/common.c',
	'storage/posix/read.c',
	'storage/posix/storage.c',
	'storage/posix/write.c',
	'storage/read.c',
	'storage/storage.c',
	'storage/write.c',
]

src_build_help = [
	'build/common/render.c',
	'build/common/yaml.c',
	'build/config/parse.c',
	'build/help/main.c',
	'build/help/parse.c',
	'build/help/render.c',
	'common/compress/bz2/common.c',
	'common/compress/bz2/compress.c',
	'common/type/xml.c',
]

build_help = executable('build-help', src_common, src_build_help, dependencies : [lib_bz2, lib_xml, lib_yaml])

subdir('command/help')

src_pgbackrest = [
	'command/archive/common.c',
	'command/archive/get/file.c',
	'command/archive/get/get.c',
	'command/archive/get/protocol.c',
	'command/archive/push/file.c',
	'command/archive/push/protocol.c',
	'command/archive/push/push.c',
	'command/backup/backup.c',
	'command/backup/common.c',
	'command/backup/pageChecksum.c',
	'command/backup/protocol.c',
	'command/backup/file.c',
	'command/check/check.c',
	'command/check/common.c',
	'command/expire/expire.c',
	'command/help/help.c',
	'command/info/info.c',
	'command/command.c',
	'command/control/common.c',
	'command/control/start.c',
	'command/control/stop.c',
	'command/local/local.c',
	'command/repo/common.c',
	'command/repo/create.c',
	'command/repo/get.c',
	'command/repo/ls.c',
	'command/repo/put.c',
	'command/repo/rm.c',
	'command/restore/file.c',
	'command/restore/protocol.c',
	'command/restore/restore.c',
	'command/remote/remote.c',
	'command/server/ping.c',
	'command/server/server.c',
	'command/stanza/common.c',
	'command/stanza/create.c',
	'command/stanza/delete.c',
	'command/stanza/upgrade.c',
	'command/verify/file.c',
	'command/verify/protocol.c',
	'command/verify/verify.c',
	'common/compress/helper.c',
	'common/compress/bz2/common.c',
	'common/compress/bz2/compress.c',
	'common/compress/bz2/decompress.c',
	'common/compress/gz/common.c',
	'common/compress/gz/compress.c',
	'common/compress/gz/decompress.c',
	'common/compress/lz4/common.c',
	'common/compress/lz4/compress.c',
	'common/compress/lz4/decompress.c',
	'common/compress/zst/common.c',
	'common/compress/zst/compress.c',
	'common/compress/zst/decompress.c',
	'common/crypto/cipherBlock.c',
	'common/crypto/common.c',
	'common/crypto/hash.c',
	'common/exec.c',
	'common/exit.c',
	'common/fork.c',
	'common/ini.c',
	'common/io/client.c',
	'common/io/fd.c',
	'common/io/fdRead.c',
	'common/io/fdWrite.c',
	'common/io/filter/size.c',
	'common/io/http/client.c',
	'common/io/http/common.c',
	'common/io/http/header.c',
	'common/io/http/query.c',
	'common/io/http/request.c',
	'common/io/http/response.c',
	'common/io/http/session.c',
	'common/io/http/url.c',
	'common/io/server.c',
	'common/io/session.c',
	'common/io/socket/client.c',
	'common/io/socket/common.c',
	'common/io/socket/server.c',
	'common/io/socket/session.c',
	'common/io/tls/client.c',
	'common/io/tls/common.c',
	'common/io/tls/server.c',
	'common/io/tls/session.c',
	'common/lock.c',
	'common/stat.c',
	'common/type/json.c',
	'common/type/xml.c',
	'config/config.c',
	'config/exec.c',
	'config/load.c',
	'config/parse.c',
	'config/protocol.c',
	'db/db.c',
	'db/helper.c',
	'db/protocol.c',
	'info/info.c',
	'info/infoArchive.c',
	'info/infoBackup.c',
	'info/manifest.c',
	'info/infoPg.c',
	'postgres/client.c',
	'postgres/interface.c',
	'postgres/interface/page.c',
	'postgres/interface/v090.c',
	'postgres/interface/v091.c',
	'postgres/interface/v092.c',
	'postgres/interface/v093.c',
	'postgres/interface/v094.c',
	'postgres/interface/v095.c',
	'postgres/interface/v096.c',
	'postgres/interface/v100.c',
	'postgres/interface/v110.c',
	'postgres/interface/v120.c',
	'postgres/interface/v130.c',
	'postgres/interface/v140.c',
	'postgres/interface/v150.c',
	'protocol/client.c',
	'protocol/command.c',
	'protocol/helper.c',
	'protocol/parallel.c',
	'protocol/parallelJob.c',
	'protocol/server.c',
	'storage/azure/helper.c',
	'storage/azure/read.c',
	'storage/azure/storage.c',
	'storage/azure/write.c',
	'storage/cifs/helper.c',
	'storage/cifs/storage.c',
	'storage/gcs/helper.c',
	'storage/gcs/read.c',
	'storage/gcs/storage.c',
	'storage/gcs/write.c',
	'storage/helper.c',
	'storage/remote/read.c',
	'storage/remote/protocol.c',
	'storage/remote/storage.c',
	'storage/remote/write.c',
	'storage/s3/helper.c',
	'storage/s3/read.c',
	'storage/s3/storage.c',
	'storage/s3/write.c',
    'main.c',
]

executable(
    'pgbackrest',
    src_common,
    src_pgbackrest,
    help_auto_c_inc,
    dependencies : [
        lib_bz2,
        lib_openssl,
        lib_pq,
        lib_xml,
        lib_z
    ]
)
